[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
anauuno= { path = ".." }
rusb = "0.9"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
winit = { version = "0.30" }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
raw-window-handle = "0.6"
